[project]
name = "my-sd15"
version = "0.1.0"
description = "SD 1.5 clean-room reimplementation"
readme = "README.md"
repository = "https://github.com/7shi/my-sd15"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "regex>=2026.2.28",
    "safetensors>=0.7.0",
    "sixel",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
my-sd15 = "my_sd15:main"

[tool.hatch.build.targets.wheel]
packages = ["my_sd15"]

[tool.uv.sources]
sixel = { git = "https://github.com/sbamboo/python-sixel.git" }
